# ContextGuard

./: .gitignore  README.md  RUNBOOK.md  pyproject.toml  tmpclaude-60d2-cwd
.github/workflows/: ci.yml
contextguard/: __init__.py  __main__.py  adapter_protocol.py  cli.py  config.py  findings.py  graph.py  model.py  output_console.py  output_json.py  output_markdown.py  output_run_metadata.py  scoring.py  terraform_adapter.py
contextguard/adapters/: adapter_protocol.py  terraform_aws.py
contextguard/core/: findings.py  graph.py  model.py  scoring.py
contextguard/outputs/: output_console.py  output_json.py  output_markdown.py
contextguard/policy/: config.py
contextguard/utils/: logger.py
examples/: contextguard.yml  sample-tfplan.json
out1/: report.json  report.md  run-metadata.json
out2/: report.json  report.md  run-metadata.json
out3/: report.json  report.md  run-metadata.json
out4/: report.json  report.md  run-metadata.json
tests/: conftest.py
tests/fixtures/: attackpath-plan.json  azurerm-only.json  empty-plan.json  full-plan.json  google-only.json  kubernetes-only.json  malformed.json  mixed-plan.json  unknown-only.json
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_findings.py  test_forward_edges.py  test_graph.py  test_scoring.py  test_terraform_adapter.py
